# fatiguelab

./: .gitignore  DEMO-SCRIPT.md  GUIDE.md  LICENSE  README.md  SPEC.md  app.py  demo.sh  fatigue_calc.py  pyproject.toml  test_app.py  test_fatigue_calc.py
docs/: backlog.md  research.md  sessions
scripts/: demo.sh
src/fatiguelab/: __init__.py  __main__.py  api.py  cli.py  demo.py  models.py
src/fatiguelab/static/: index.html
static/: index.html
tests/: test_api.py  test_models.py
