[project]
name = "fatiguelab"
version = "0.2.0"
description = "MSD risk assessment tools based on fatigue failure theory (LiFFT, DUET, Shoulder Tool)"
license = "MIT"
authors = [{ name = "Danny J. O'Leary" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[project.scripts]
fl = "fatiguelab.cli:main"
fatiguelab = "fatiguelab.cli:main"

[project.urls]
Repository = "https://github.com/olearydj/fatiguelab"

[build-system]
requires = ["uv_build>=0.7,<1"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
